src/main/java/com/example/connection/error/Exception/ConnectionNotFoudExceptionHandler.java
package com.example.connection.error.Exception;

public class ConnectionNotFoudExceptionHandler extends RuntimeException {
    
    public ConnectionNotFoudExceptionHandler(String massage){
        super(massage);
    }
}
